# ballot

./: .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake
data/: test.csv
example/: example.csv  public_ballot.csv  public_ballot.json  secret_ballot.csv
legacy/: README.md  ballot.java
src/: ballot.cpp  ballot.hpp  clargs.hpp  cli_args.hpp  collusion.cpp  collusion.hpp  cost.hpp  lapjv.hpp  main.cpp  person.cpp  person.hpp  read.hpp  secrets.cpp  secrets.hpp  wrap_lapjv.hpp
